# wikihub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  NOTABLE.md  Procfile  README.md  SPINOFFS.md  USECASES.md  config.py  mcp_server.py  railway.toml  requirements.txt  wikihub-spec-final-2026-04-08.md
.beads/: interactions.jsonl  issues.jsonl
.interface-design/: system.md
.playwright-mcp/: page-2026-04-11T06-02-15-862Z.yml
app/: __init__.py  acl.py  admin_utils.py  auth_utils.py  backlinks.py  canonical_redirect.py  content_utils.py  credentials_hint.py  discovery.py  email_service.py  feeds.py  git_backend.py  git_sync.py  models.py  page_utils.py  renderer.py  subdomain_middleware.py  subdomains.py  url_utils.py  wiki_ops.py
cli/: README.md  pyproject.toml
cli/wikihub_cli/: __main__.py
docs/: MCP_CONNECTOR_BLUEPRINT.md  agent-discovery.md  audit-2026-04-10.md  backup-and-restore.md  deploy.md  future-brainstorming.md  philosophy.md  spec-delta-report-2026-04-10.md
electron/: electron-builder.yml  main.js  package-lock.json  package.json  preload.js  tray.js
hooks/: post-receive  pre-receive
mcp-server/: README.md  package-lock.json  package.json
migrations/: 2026-04-21_anonymous_posting.sql  2026-04-21_email_verified_at.sql  2026-04-21_pending_invites.sql  2026-04-22_email_verification_tokens.sql  2026-04-22_password_reset_tokens.sql  2026-04-22_pending_invites_token.sql  2026-04-23_admin_flag_and_settings.sql  2026-04-29_wikilinks_backlink_indexes.sql  2026-05-08_proposal_comments.sql  2026-05-08_suggested_edit_proposals.sql  (+2 more)
mockups/: agents.html  (+9 more)
(+89 files in other folders)
